--- a/index.html
+++ b/index.html
@@ -97,11 +97,10 @@
         <img id="myImg4" src="img/hb_l2.png">
     </div>
     <div style="display: none;" id="js_yingxiao" pub-name="营销点代码"></div><!--ignore-->  
-    <script charset="utf-8" src="https://nie.res.netease.com/comm/js/jquery(mixNIE).1.11.js"></script>
-    <script charset="utf-8" src="https://nie.res.netease.com/comm/js/nie/ref/jquery.superslide.js"></script>
+    <script charset="utf-8" src="js/lib/jquery(mixNIE).1.11.js"></script>
+    <script charset="utf-8" src="js/lib/jquery.superslide.js"></script>
     <script charset="utf-8" src="js/lib/jquery.mousewheel.js"></script>
     <script charset="utf-8" src="js/lib/parallax.js"></script>
-    <!-- <script charset="utf-8" src="js/app/flyflowers.js"></script>   -->
     <script charset="utf-8" src="js/app/bundle.js"></script>  
     <!--usemin js(pkg/app.js)-->   
     <script charset="utf-8" src="js/app/common.js"></script>    
